--- a/css/page3style.css
+++ b/css/page3style.css
@@ -1,7 +1,8 @@
 body {
   max-width: 1000px;
   max-height: 1000px;
-  background-color: black;
+  background-image: url(/images/bc.jpeg);
+  background-size: cover;
   text-align: center;
 }
 
@@ -288,4 +289,23 @@ body {
     margin-top: 100px;
     margin-right: 40px;
     margin-bottom: 40px;
+  }
+
+
+  .comment{
+    width:80px;
+    height: 80px;
+  }
+  .like{
+    width:80px;
+    height: 80px;
+}
+  .repost{
+    width:80px;
+    height: 80px;
+  }
+
+  .xiaoxin{
+    width: 100px;
+    height: auto;
   }
