--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@ h3 {
   float:left;
 }
 .one:hover{
-background-image: url(/images/14.png);
+background-color: #A5E8C3;
   width:300px;
   height:300px;
   background-repeat: no-repeat;
