--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,7 @@ background-color: #A5E8C3;
   float:left;
 }
 .two:hover{
-background-image: url(https://github.com/MengshiChen/critical_interactivity/blob/master/images/13.jpeg);
+background-image: url('https://github.com/MengshiChen/critical_interactivity/blob/master/images/13.jpeg');
   width:300px;
   height:250px;
   background-repeat: no-repeat;
