--- a/css/style.css
+++ b/css/style.css
@@ -105,7 +105,7 @@ background-color: #E4BAFF;
     float: left;
   }
 .six:hover{
-  background-image: url('/images/candy.png');
+  background-image: url('https://banner2.cleanpng.com/20180411/rbq/kisspng-kakaotalk-kakao-friends-emoticon-sticker-viber-5acdc9126e37a9.4679507015234357944515.jpg');
     width:230px;
     height:350px;
     background-repeat: no-repeat;
