--- a/css/style.css
+++ b/css/style.css
@@ -105,7 +105,7 @@ background-color: #E4BAFF;
     float: left;
   }
 .six:hover{
-  background-image: url('https://banner2.cleanpng.com/20180325/zqq/kisspng-candy-corn-halloween-clip-art-candy-corn-cliparts-5ab74a709116f0.5163451615219615845943.jpg');
+  background-image: url('images/candy.png');
     width:230px;
     height:350px;
     background-repeat: no-repeat;
@@ -147,7 +147,7 @@ background-color: #E4BAFF;
       float: left;
     }
 .nine:hover{
-    background-image: url('https://banner2.cleanpng.com/20180411/rbq/kisspng-kakaotalk-kakao-friends-emoticon-sticker-viber-5acdc9126e37a9.4679507015234357944515.jpg');
+    background-image: url('images/yellow.png');
       width:400px;
       height:420px;
       background-repeat: no-repeat;
