--- a/css/style.css
+++ b/css/style.css
@@ -160,7 +160,7 @@ background-color: #E4BAFF;
       float: left;
     }
 .ten:hover {
-    background-color:#AAFFB0);
+     background-color:#AAFFB0;
       width:200px;
       height:120px;
       background-repeat: no-repeat;
